Use layered windows for Win8+ again.

Start using layered windows for HWNDs that need to support transparency
on Windows 8 and higher again. DWM supports alpha channels for HWNDs
natively. This seemed to work well, however there is a problem with
touch highlight and pointer trail features. Windows blends the area near
the cursor with HWND content below it. When not using layered windows
there is a bug where the area that is redrawn for highlight/trail is
older content than the rest of the HWND. This is a return to the
behaviour found in M67.

Bug: 843974
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I1e6dc7e774c5f70653352006f4f548a15862594e
Reviewed-on: https://chromium-review.googlesource.com/1082793
Commit-Queue: kylechar <kylechar@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563785}
Former-commit-id: 57631e9ebf5bff0179e710a7f949d8e1fe72676d