components/viz/common/display/use_layered_window.h
@@ -12,11 +12,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace viz {
 
-// Layered windows are a legacy way of supporting transparency for HWNDs. With
-// Desktop Window Manager (DWM) HWNDs support transparency natively. DWM is
-// always enabled on Windows 8 and later. However, for Windows 7 (and earlier)
-// DWM might be disabled and layered windows are necessary to guarantee the HWND
-// will support transparency.
+// Checks if an HWND needs to support transparency and should use a layered
+// window.
 VIZ_COMMON_EXPORT bool NeedsToUseLayerWindow(HWND hwnd);
 
 }  // namespace viz
